save: ready to be deployed in the host

--- a/server.properties
+++ b/server.properties
@@ -1,7 +1,7 @@
 #Minecraft server properties
 #Sun Nov 21 21:23:57 UTC 2021
 enable-jmx-monitoring=false
-rcon.port=25575
+rcon.port=#
 level-seed=
 enable-command-block=true
 gamemode=survival
@@ -9,7 +9,7 @@ enable-query=false
 generator-settings=
 level-name=MundoFriko
 motd=(\u00AC\u00AC)
-query.port=25565
+query.port=#
 hellworld=true
 pvp=false
 texture-pack=
@@ -26,10 +26,10 @@ allow-flight=false
 broadcast-rcon-to-ops=true
 view-distance=8
 max-build-height=256
-server-ip=199.15.116.50
+server-ip=#
 resource-pack-prompt=
 allow-nether=true
-server-port=25595
+server-port=#
 sync-chunk-writes=true
 enable-rcon=false
 op-permission-level=4
